# CKOS

./: .gitignore  CMakeLists.txt  KSP.sh  README.md  build.sh  build_release.sh  compile_commands.json  test.py
include/: boost  spdlog
src/: AscentStage.cpp  AscentStage.h  AscentToOrbitTest.cpp  CKOS_Unit.cpp  CKOS_Unit.h  CMakeLists.txt  LanderTest.cpp  Logger.cpp  Logger.h  Math.cpp  Math.h  MissionInfo.cpp  MissionInfo.h  MissionPlan.cpp  MissionPlan.h  MissionStage.cpp  MissionStage.h  StreamLogger.cpp  StreamLogger.h  krpc_formatter.h  main.cpp
src/Base/: CMakeLists.txt  KMath.cpp  Logger.cpp  MissionInfo.cpp  MissionInfo.h  krpc_formatter.h
src/Guidance/: CMakeLists.txt  Interface.cpp  Interface.h
src/Guidance/Simulator/: CMakeLists.txt  IntegrateSystem.cpp  IntegrateSystem.h
src/Simulator/: BrakeCalculator.cpp  BrakeCalculator.h  CMakeLists.txt  IntegrateSystem.h  Interface.cpp  Interface.h
src/Stages/: Ascent.cpp  Ascent.h  CMakeLists.txt  MissionStage.cpp  MissionStage.h  Node.cpp  Node.h  OrbitalInsertion.cpp  OrbitalInsertion.h  SuicideBurn.cpp  SuicideBurn.h
src/Units/: CKOS_Unit.cpp  CKOS_Unit.h  CMakeLists.txt
src/Units/Stages/: Ascent.cpp  Ascent.h  AscentToOrbitTest.cpp  CMakeLists.txt  LanderTest.cpp  MissionStage.cpp  MissionStage.h  Node.cpp  Node.h  OrbitalInsertion.cpp  OrbitalInsertion.h  SuicideBurn.cpp  SuicideBurn.h
